[package]
name = "graphstack"
version = "0.1.2"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>"]
edition = "2018"
description = "Graph-structured stack"
license = "MIT"
repository = "https://github.com/rodolf0/graphstack"
categories = ["data-structures"]
keywords = ["parser", "ast", "parse-forest", "graph-stack"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
